--- a/landing-page/src/app/main/main.component.html
+++ b/landing-page/src/app/main/main.component.html
@@ -1,1 +1,110 @@
-<p>main works!</p>
+<main>
+  <app-lines></app-lines>
+
+  <p class="info-title mb-3">
+    As lojas Propz agora possuem um espaço gamer
+    <br />
+    onde você encontra tudo para montar os melhores setups
+    <br />
+    Venha Conhecer!
+  </p>
+
+  <ngb-carousel #carousel>
+    <ng-template *ngFor="let item of items" ngbSlide>
+      <div class="item">
+        <img class="product-img" [src]="item.imgSrc" />
+
+        <div class="item-info">
+          <p class="item-name">{{ item.name }}</p>
+
+          <hr />
+
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-column">
+              <div class="price-without-fees-wrapper">
+                <div>
+                  <span class="times">{{ item.pricing.valueWithoutFees.times }}</span>
+                  X
+                  <span class="money">R$</span>
+                  <span class="value">{{
+                    getRoundValue(item.pricing.valueWithoutFees.value)
+                  }}</span>
+                  <span class="comma">,</span>
+                  <span class="decimals">{{
+                    getDecimalValue(item.pricing.valueWithoutFees.value)
+                  }}</span>
+                </div>
+
+                <div class="fee-text">sem juros <span class="sup">1</span></div>
+              </div>
+
+              <div class="price-with-fees-wrapper">
+                <div>
+                  <span class="times">{{ item.pricing.valueWithFees.times }}</span>
+                  X
+                  <span class="money">R$</span>
+                  <span class="value">{{ getRoundValue(item.pricing.valueWithFees.value) }}</span>
+                  <span class="comma">,</span>
+                  <span class="decimals">{{
+                    getDecimalValue(item.pricing.valueWithFees.value)
+                  }}</span>
+                </div>
+
+                <div class="fee-text">com juros <span class="sup">2</span></div>
+              </div>
+            </div>
+
+            <div class="d-flex flex-column flex-grow-1">
+              <div class="logos d-flex justify-content-end">
+                <img src="/assets/visa-logo.png" />
+                <img src="/assets/mastercard-logo.png" />
+              </div>
+
+              <div class="total-value">
+                ou R${{ transformInMoneyValue(item.pricing.total) }} à vista
+              </div>
+            </div>
+          </div>
+
+          <hr />
+        </div>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+
+  <!-- <div id="itens-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/product-img-1.jpg" class="d-block w-100" />
+
+        <div>
+          <p>prod name</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://placehold.co/600x400" class="d-block w-100" alt="..." />
+        <p>bbbbbbbbbbbbbbbb</p>
+      </div>
+      <div class="carousel-item">
+        <img src="https://placehold.co/600x400" class="d-block w-100" alt="..." />
+        <p>cccccccccccccccc</p>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#itens-carousel"
+      data-bs-slide="prev"
+    >
+      <div class="arrow-right"></div>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#itens-carousel"
+      data-bs-slide="next"
+    >
+      <div class="arrow-left"></div>
+    </button>
+  </div> -->
+</main>
