add second lines

--- a/landing-page/src/app/main/main.component.html
+++ b/landing-page/src/app/main/main.component.html
@@ -9,6 +9,8 @@
     Venha Conhecer!
   </p>
 
+  <app-lines class="product-lines"></app-lines>
+
   <ngb-carousel #carousel>
     <ng-template *ngFor="let item of items" ngbSlide>
       <div class="item">
