--- a/landing-page/src/app/footer/footer.component.html
+++ b/landing-page/src/app/footer/footer.component.html
@@ -1,1 +1,23 @@
-<footer></footer>
+<footer>
+  <div class="stores-locations">
+    <p>Lojas Propz</p>
+
+    <hr />
+
+    <p>Belo Horizonte</p>
+    <p>Campinas</p>
+    <p>São Paulo</p>
+    <p>Rio de Janeiro</p>
+  </div>
+
+  <img class="propz-logo" src="assets/propz-logo.png" alt="" />
+
+  <p>
+    Propz S.A. Central de Atendimento — Consultas, e serviços transacionais: 45544—0097 (capitais e
+    regiões metropolitanas) e 0800 778 5658 (demais bcalidades), atendimento de segunda a das 8h às
+    22h, exceto feriados. SAC Propz — Reclamações, cancelamentos e informações gerais: 0800 985 9365
+    Deficiência auditiva ou de fala: 0800 722 0088 (a- tendimento 24 horas, 7 dias por semana).
+    Ouvkioria — Demandas não cionadas pelos demais Canais de Atendimento: 0800 727 9599 (atendimen—
+    to de segunda a sexta—feira, das 8h às 18h, exceto feriados).
+  </p>
+</footer>
