--- a/landing-page/src/app/main/main.component.html
+++ b/landing-page/src/app/main/main.component.html
@@ -58,8 +58,8 @@
 
             <div class="d-flex flex-column flex-grow-1">
               <div class="logos d-flex justify-content-end">
-                <img src="/assets/visa-logo.png" />
-                <img src="/assets/mastercard-logo.png" />
+                <img src="./assets/visa-logo.png" />
+                <img src="./assets/mastercard-logo.png" />
               </div>
 
               <div class="total-value">
