--- a/landing-page/src/app/main/main.component.scss
+++ b/landing-page/src/app/main/main.component.scss
@@ -90,7 +90,7 @@ main {
       opacity: 1;
 
       span {
-        background-image: url(/assets/left-arrow.png);
+        background-image: url(../../assets/left-arrow.png);
         width: 40px;
         height: 30px;
       }
@@ -100,7 +100,7 @@ main {
       opacity: 1;
 
       span {
-        background-image: url(/assets/right-arrow.png);
+        background-image: url(../../assets/right-arrow.png);
         width: 40px;
         height: 30px;
       }
