--- a/landing-page/src/app/main/main.component.scss
+++ b/landing-page/src/app/main/main.component.scss
@@ -18,6 +18,8 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 0 55px;
+  color: unset;
+  text-decoration: unset;
 
   .product-img {
     width: 200px;
